scooter/tests/snapshots/app_runner__text_wrapping_enabled__result_2.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot.as_ref()
---
                                     scooter                                    
   ┌Search text───────────────────────────────────────────────────────────┐    
   │users                                                                 │    
   └──────────────────────────────────────────────────────────────────────┘    
   ┌Replace text──────────────────────────────────────────────────────────┐    
   │REPLACED                                                              │    
   └──────────────────────────────────────────────────────────────────────┘    
                                                                               
   Results: 2 [Search complete]                       [Time taken: TIME]     
                                                                               
   [x] file1.txt:2                                                      (1)    
   [x] file1.txt:17                                                     (2)    
                                                                               
                                                                               
                                                                               
                                                                               
     6                                                                         
     7                                                                         
     8                                                                         
   - 9 users 10                                                                
   + 9 REPLACED 10                                                             
     .                                                                         
                                                                               
space> toggle / <esc> back to search fields / <ret> replace selected / <C-h> he
